tests/paczka1/fuzzy1/10670437.err
Error in line 1: mCe99i A675 20,9
Error in line 12: A590 S719 26,6
Error in line 15: A590 A675 55,3
Error in line 17: A590 S944 57,5
Error in line 20: A590 A675 67,9
Error in line 37: yMo S719 36,8
